# solx

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  all.profdata  codecov.yml  deny.toml  install-solx  renovate.json  rust-toolchain.toml  solidity.yaml  versions.json
solx/: Cargo.toml  build.rs
solx-benchmark-converter/: Cargo.toml
solx-benchmark-converter/src/: comparison.rs  lib.rs  pipeline.rs  role.rs  suite_kind.rs  suite_outcome.rs  summary_suite.rs  toolchain_matrix.rs  utils.rs
solx-benchmark-converter/src/benchmark/: mod.rs  run_failures.rs
solx-benchmark-converter/src/benchmark_converter/: arguments.rs  main.rs  tests.rs
solx-benchmark-converter/src/benchmark_summary/: arguments.rs  main.rs
solx-benchmark-converter/src/input/: error.rs  mod.rs  report.rs  source.rs
solx-benchmark-converter/src/output/: comparison.rs  format.rs  json.rs  markdown.rs  mod.rs
solx-benchmark-converter/src/tests/: benchmark.rs  diff_counter.rs  failure_regressions.rs  failure_verdict.rs  health_issue.rs  input.rs  io.rs  listings.rs  mod.rs  output_verdict.rs  summary.rs  toolchain_matrix.rs  top_movers.rs  utils.rs  verdicts.rs  xlsx.rs
solx-benchmark-converter/templates/: summary.md
solx-codegen-evm/: Cargo.toml
solx-codegen-evm/src/: const.rs  diagnostics.rs  lib.rs  target_machine.rs
solx-codegen-evm/src/codegen/: attribute.rs  build.rs  mod.rs
solx-codegen-evm/src/context/: debug_info.rs  mod.rs  pointer.rs
solx-codegen-evm/src/debug_config/: mod.rs
solx-compiler-downloader/: Cargo.toml  dev-compilers.json  solc-bin-llvm.json  solc-bin-upstream.json  solc-upstream.json  solx-mlir.json
solx-compiler-downloader/src/: lib.rs
solx-compiler-downloader/src/config/: mod.rs
solx-core/: Cargo.toml
solx-core/src/: arguments.rs  compiler.rs  const.rs  frontend.rs  lib.rs
solx-core/src/error/: mod.rs  stack_too_deep.rs
solx-core/src/process/: channel.rs  child.rs  input.rs  job.rs  mod.rs  output.rs  pool.rs  session.rs  worker.rs
solx-core/src/project/: mod.rs
solx-dev/: Cargo.toml  LICENSE-APACHE  foundry-tests.toml  hardhat-tests.toml  solc-downloader.json
solx-dev/src/: build_type.rs  ccache_variant.rs  constants.rs  lib.rs  shim.rs  utils.rs  workflow.rs
solx-dev/src/llvm/: mod.rs  path.rs
solx-dev/src/solc/: boost.rs  mod.rs
solx-dev/src/solx_dev/: main.rs
solx-dev/src/test/: mod.rs
solx-evm-assembly/: Cargo.toml
solx-evm-assembly/src/: lib.rs
solx-evm-assembly/src/assembly/: data.rs  mod.rs
solx-evm-assembly/src/ethereal_ir/: mod.rs
solx-evm-assembly/src/extra_metadata/: defined_function.rs  mod.rs
solx-mlir/: Cargo.toml  build.rs  execution_engine_link_stubs.c  mlir_execution_engine_stubs.c  sol_attr_stubs.cpp  sol_capi_ext.cpp
solx-mlir/src/: attributes.rs  builder.rs  context.rs  dialect.rs  environment.rs  ffi.rs  function_entry.rs  icmp_predicate.rs  lib.rs  llvm_module.rs  loop_target.rs  macros.rs  ods.rs  ops.rs  output.rs
solx-mlir/src/attributes/: cmp_predicate.rs  contract_kind.rs  function_kind.rs  icmp_predicate.rs  mod.rs  state_mutability.rs  yul_cmp_predicate.rs
solx-mlir/src/builder/: constant.rs  function_signature.rs  llvm.rs  mod.rs  passes.rs  sol.rs  translation.rs
solx-mlir/src/context/: builder.rs  contract.rs  environment.rs  function.rs  mod.rs  modifier.rs  passes.rs  pointer.rs  translation.rs  try_fallback_kind.rs  user_defined_operator.rs  value.rs  variable_binding.rs  yul_value.rs
solx-mlir/src/environment/: mod.rs
solx-mlir/src/ir/: attributes.rs  block.rs  mod.rs  place.rs  pointer.rs  value.rs  yul_value.rs
solx-mlir/src/tests/: context.rs  mod.rs
solx-mlir/tests/: bytecode.rs
solx-mlir/tests/lit/: abi_coding.sol  abi_decode_library.sol  abi_decode_storage_bytes.sol  abi_encode_call.sol  abi_encode_with_signature.sol  addmod.sol  address_cast.sol  address_code.sol  address_members.sol  aggregate_default_init.sol  arithmetic.sol  array_literal_state_var.sol  array_pop_push_empty_braces.sol  array_push_reference.sol  array_slice.sol  array_string_ops.sol  array_type_cast.sol  assembly_arithmetic.sol  assembly_bitwise.sol  assembly_call_create.sol  assembly_calldata_code.sol  assembly_comparison.sol  assembly_control_flow.sol  assembly_env.sol  assembly_evm_intrinsics.sol  assembly_local_variables.sol  assembly_log.sol  assembly_memory.sol  assembly_terminators.sol  assembly_transient.sol  assert.sol  assignment_element_reference_copy.sol  assignment_namespace_state_var.sol  assignment_push_lvalue.sol  assignment_tuple_conditional_rhs.sol  assignment_tuple_nested_blank.sol  attached_library_calldata_return.sol  bare_calls.sol  base_constructor_chain.sol  base_constructor_header_args.sol  (+319 more)
solx-slang/: Cargo.toml
solx-slang/src/: ast.rs  frontend.rs  lib.rs  macros.rs  scope.rs  slang.rs  source_unit.rs  type.rs
solx-slang/src/ast/: arguments_declaration_ext.rs  block_and.rs  expression_ext.rs  library_ext.rs  mod.rs  named_arguments_ext.rs  operator_binding.rs  place.rs  tuple_expression_ext.rs  type.rs  type_conversion.rs  value.rs
solx-slang/src/codegen/: contract.rs  expression.rs  function.rs  mod.rs  selector.rs  source_unit.rs  statement.rs  types.rs
solx-slang/src/contract/: mod.rs  state_variable.rs  storage_slot.rs
solx-slang/src/scope/: contract.rs  function.rs  mod.rs  source_unit.rs
solx-slang/src/slang/: compilation_config.rs  mod.rs
solx-slang/src/tests/: mod.rs  slang.rs
solx-solc-test-adapter/: Cargo.toml
solx-solc-test-adapter/src/: lib.rs
solx-standard-json/: Cargo.toml
solx-standard-json/src/: lib.rs  version.rs
solx-tester/: Cargo.toml  build.rs
solx-tester/src/: filters.rs  lib.rs  toolchain.rs  utils.rs
solx-utils/: Cargo.toml
solx-utils/src/: address_space.rs  cbor.rs  code_segment.rs  contract_name.rs  data_location.rs  deserializer.rs  evm_version.rs  extension.rs  lib.rs  libraries.rs  sync_lock.rs  target.rs
solx-yul/: Cargo.toml  LICENSE-APACHE
solx-yul/src/: error.rs  lib.rs
solx-yul/tests/: printer.rs
solx/src/: lib.rs  solc.rs  solx.rs
solx/tests/: mod.rs
solx/tests/cli/: abi.rs  (+50 more)
(+853 files in other folders)
