[workspace]
members = [
    "solx",
    "solx-slang",
    "solx-core",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
    "solx-dev",
    "solx-tester",
    "solx-benchmark-converter",
    "solx-solc-test-adapter",
    "solx-compiler-downloader",
]
resolver = "2"

[workspace.package]
authors = [
    "Matter Labs <alex@nomic.foundation>",
    "Nomic Foundation <alex@nomic.foundation>",
]
edition = "2024"
version = "0.1.4"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.9"
ciborium = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"

# Concurrency
rayon = "1.11"

# Utilities
semver = { version = "1.0", features = ["serde"] }
hex = "0.4"
num = "0.4"
regex = "1.12"
glob = "0.3"
itertools = "0.14"
sha3 = "0.10"
md5 = "0.7"

# LLVM
[workspace.dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "main"
default-features = false
features = [
    "llvm21-1",
    "serde",
    "no-libffi-linking",
    "target-evm",
]
