[workspace]
members = [
    "solx",
    "solx-slang",
    "solx-core",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
    "solx-dev",
    "solx-tester",
    "solx-benchmark-converter",
    "solx-solc-test-adapter",
    "solx-compiler-downloader",
    "solx-mlir",
]
# IMPORTANT: solx-slang and solx-mlir are intentionally excluded from
# default-members. They depend on inkwell with `llvm21-1-no-llvm-linking`,
# while solx-codegen-evm uses inkwell with `llvm21-1` (links LLVM). Cargo
# feature unification would merge these into one inkwell with conflicting
# features, causing linker failures. Use `cargo test-slang` to test them.
default-members = [
    "solx",
    "solx-core",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
    "solx-dev",
    "solx-tester",
    "solx-benchmark-converter",
    "solx-solc-test-adapter",
    "solx-compiler-downloader",
]
resolver = "2"

[workspace.package]
authors = [
    "Matter Labs <alex@nomic.foundation>",
    "Nomic Foundation <alex@nomic.foundation>",
]
edition = "2024"
version = "0.1.4"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.9"
ciborium = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"

# Concurrency
rayon = "1.11"

# Utilities
semver = { version = "1.0", features = ["serde"] }
hex = "0.4"
num = "0.4"
regex = "1.12"
glob = "0.3"
itertools = "0.14"
sha3 = "0.10"
md5 = "0.7"

# Testing
[workspace.dependencies.web3]
git = "https://github.com/tomusdrw/rust-web3"
rev = "8d889ae3270508f1e68b6a29bbe51b2bedf7fb1e"
default-features = false
features = ["http-rustls-tls", "test", "signing"]

# LLVM
[workspace.dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "main"
default-features = false
features = [
    "llvm21-1",
    "serde",
    "no-libffi-linking",
    "target-evm",
]
