[workspace]
members = [
    "solx",
    "solx-slang",
    "solx-core",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
    "solx-dev",
    "solx-tester",
    "solx-benchmark-converter",
    "solx-solc-test-adapter",
    "solx-compiler-downloader",
    "solx-mlir",
]
# IMPORTANT: solx-slang and solx-mlir are intentionally excluded from
# default-members. They depend on inkwell with `llvm21-1-no-llvm-linking`,
# while solx-codegen-evm uses inkwell with `llvm21-1` (links LLVM). Cargo
# feature unification would merge these into one inkwell with conflicting
# features, causing linker failures. Use `cargo test-slang` to test them.
default-members = [
    "solx",
    "solx-core",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
    "solx-dev",
    "solx-tester",
    "solx-benchmark-converter",
    "solx-solc-test-adapter",
    "solx-compiler-downloader",
]
resolver = "3"

[workspace.package]
authors = [
    "Matter Labs <alex@nomic.foundation>",
    "Nomic Foundation <alex@nomic.foundation>",
]
edition = "2024"
version = "0.1.4"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0", features = ["arbitrary_precision", "raw_value"] }
serde_yaml = "0.9"
ciborium = "0.2"

# CLI
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"

# Concurrency
rayon = "1.12"

# Utilities
semver = { version = "1.0", features = ["serde"] }
gimli = "0.34"
hex = "0.4"
num = "0.4"
object = "0.39"
regex = "1.12"
glob = "0.3"
itertools = "0.15"
sha2 = "0.11"
sha3 = "0.12"
md5 = "0.8"
ruint = "1.17"

# Testing
[workspace.dependencies.web3]
git = "https://github.com/tomusdrw/rust-web3"
rev = "8d889ae3270508f1e68b6a29bbe51b2bedf7fb1e"
default-features = false
features = ["http-rustls-tls", "test", "signing"]

# LLVM
[workspace.dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "az-reset-option-occurrences"
default-features = false
features = [
    "llvm21-1",
    "serde",
    "no-libffi-linking",
    "target-evm",
]

# Slang
[workspace.dependencies.slang_solidity_v2]
git = "https://github.com/NomicFoundation/slang.git"
# TODO: pin to a release tag instead of a revision.
rev = "96375f5409aaf2a5f4d2889318429b0d83882d6d"
