[package]
name = "solx-benchmark-converter"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Benchmark converter for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-benchmark-converter"
path = "src/benchmark_converter/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
rust_xlsxwriter = "0.93"
