[package]
name = "solx-codegen-evm"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "EVM codegen for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
semver.workspace = true
num.workspace = true
inkwell.workspace = true
indexmap = { version = "2.13", features = ["serde"] }

solx-utils = { path = "../solx-utils" }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.24"
