[package]
name = "solx-compiler-downloader"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Auxiliary compiler downloader for solx"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking"]
