[package]
name = "solx-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "solx compiler core library"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
semver.workspace = true
hex.workspace = true
num.workspace = true
rayon.workspace = true
inkwell.workspace = true
path-slash = "0.2"
normpath = "1.5"

solx-standard-json = { path = "../solx-standard-json" }
solx-evm-assembly = { path = "../solx-evm-assembly" }
solx-yul = { path = "../solx-yul" }
solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-mlir = { path = "../solx-mlir", optional = true }
solx-utils = { path = "../solx-utils" }

[features]
solc = []
mlir = []
