[package]
name = "solx-dev"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Developer tool for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-dev"
path = "src/solx_dev/main.rs"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
sha2.workspace = true
serde_json.workspace = true
regex.workspace = true
glob.workspace = true
hex.workspace = true
itertools.workspace = true
toml = "0.8"
fs_extra = "1.3"
path-slash = "0.2"
sedregex = "0.2"

solx-compiler-downloader = { path = "../solx-compiler-downloader" }
solx-benchmark-converter = { path = "../solx-benchmark-converter" }
solx-utils = { path = "../solx-utils" }
