[package]
name = "solx-evm-assembly"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "EVM assembly translator for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
ciborium.workspace = true
semver.workspace = true
hex.workspace = true
num.workspace = true
rayon.workspace = true
inkwell.workspace = true
twox-hash = "2.1"

solx-yul = { path = "../solx-yul" }
solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-utils = { path = "../solx-utils" }
