[package]
name = "solx-mlir"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "MLIR integration for solx via melior"
license = "MIT OR Apache-2.0"

[build-dependencies]
cc = "1.2.60"

[dependencies]
anyhow.workspace = true
melior = { git = "https://github.com/NomicFoundation/melior", rev = "62a909e2ff67fcc19f7f42dc4fb70c3e03376bd2", features = ["ods-dialects", "helpers"] }
# mlir-sys 210 wraps LLVM 21.0 C API; llvm-sys (via inkwell) targets 21.1.
# Both are built from the same LLVM source tree (LLVM_SYS_211_PREFIX ==
# MLIR_SYS_210_PREFIX), so the pointer casts between their types are ABI-
# compatible. If these crates diverge to different LLVM builds, the
# transmutes in context.rs become unsound.
# TODO: Track mlir-sys 211 availability.
mlir-sys = "210.0"

inkwell = { workspace = true, features = ["llvm21-1-no-llvm-linking"] }

solx-utils = { path = "../solx-utils", features = ["mlir"] }

[dev-dependencies]
hex.workspace = true
