[package]
name = "solx-slang"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Slang Solidity frontend for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
num-bigint = "0.4"
num-traits = "0.2"
ruint.workspace = true
serde_json.workspace = true
semver.workspace = true
slang_solidity_v2.workspace = true
melior = { git = "https://github.com/NomicFoundation/melior", rev = "193e8252ca5d2774555b3e2f29ec8b97f28f5d38", features = ["ods-dialects", "helpers"] }

solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-core = { path = "../solx-core", features = ["mlir"] }
solx-mlir = { path = "../solx-mlir" }
solx-standard-json = { path = "../solx-standard-json", features = ["mlir"] }
solx-utils = { path = "../solx-utils", features = ["slang"] }

# Complexity bar for the lowering code: no god functions, no wide-arg signatures.
# Defaults (7 args / 100 lines) are the enforced thresholds. `missing_docs` is
# kept as the active `-W` rustflag in `.cargo/config.toml`; private-item docs are
# intentionally NOT required here (would flood the WIP frontend).
[lints.clippy]
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"
