[package]
name = "solx-slang"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Slang Solidity frontend for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
num-bigint = "0.4"
num-traits = "0.2"
ruint.workspace = true
serde_json.workspace = true
semver.workspace = true

melior = { git = "https://github.com/NomicFoundation/melior", rev = "193e8252ca5d2774555b3e2f29ec8b97f28f5d38", features = ["ods-dialects", "helpers"] }
slang_solidity_v2.workspace = true
slang_solidity_v2_common.workspace = true

solx-core = { path = "../solx-core", features = ["mlir"] }
solx-standard-json = { path = "../solx-standard-json", features = ["mlir"] }
solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-mlir = { path = "../solx-mlir" }
solx-utils = { path = "../solx-utils", features = ["slang"] }
