[package]
name = "solx-slang"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Slang Solidity frontend for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
num-bigint = "0.4"
num-traits = "0.2"
ruint.workspace = true
serde_json.workspace = true
semver.workspace = true
slang_solidity_v2.workspace = true
slang_solidity_v2_common.workspace = true

solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-core = { path = "../solx-core", features = ["mlir"] }
solx-mlir = { path = "../solx-mlir" }
solx-standard-json = { path = "../solx-standard-json", features = ["mlir"] }
solx-utils = { path = "../solx-utils", features = ["slang"] }
