[package]
name = "solx-solc-test-adapter"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Solidity test adapter for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-test-updater"
path = "src/solx_solc_test_updater/main.rs"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
serde_yaml.workspace = true
semver.workspace = true
md5.workspace = true
regex.workspace = true
web3.workspace = true

solx-utils = { path = "../solx-utils" }
