[package]
name = "solx-standard-json"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Standard JSON protocol for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
num.workspace = true
rayon.workspace = true
hex.workspace = true
boolinator = "2.4"

solx-evm-assembly = { path = "../solx-evm-assembly" }
solx-utils = { path = "../solx-utils" }
