[package]
name = "solx-tester"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Integration testing framework for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-tester"
path = "src/solx_tester/main.rs"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
semver.workspace = true
hex.workspace = true
sha3.workspace = true
md5.workspace = true
regex.workspace = true
glob.workspace = true
itertools.workspace = true
rayon.workspace = true
which = "7.0"
ron = "0.9"
rlp = "0.6"
once_cell = "1.21"
revm = "34.0"

solx-standard-json = { path = "../solx-standard-json" }
solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-utils = { path = "../solx-utils" }
solx-benchmark-converter = { path = "../solx-benchmark-converter" }
solx-solc-test-adapter = { path = "../solx-solc-test-adapter" }
solx-compiler-downloader = { path = "../solx-compiler-downloader" }
solx-dev = { path = "../solx-dev" }

[dependencies.web3]
git = "https://github.com/jacques-kigo/rust-web3"
branch = "master"
default-features = false
features = ["http-rustls-tls", "test", "signing"]
