[package]
name = "solx-utils"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Common utilities for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["unbounded_depth"] }
semver.workspace = true
hex.workspace = true
sha3.workspace = true
serde_stacker = "0.1"
serde_arrays = "0.2"
ipfs-hasher = "0.13"
base58 = "0.2"
