[package]
name = "solx-yul"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Yul lexer and parser for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

solx-utils = { path = "../solx-utils" }
