[package]
name = "solx"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "LLVM-based Solidity compiler for the EVM"
license = "GPL-3.0-only"

[[bin]]
name = "solx"
path = "src/solx.rs"

[lib]
doctest = false

[features]
default = ["solc"]
solc = ["solx-core/solc"]
mlir = ["solx-core/mlir"]
slang = ["mlir", "solx-core/solx-mlir", "dep:solx-slang"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
libc = "0.2"

solx-core = { path = "../solx-core" }
solx-slang = { path = "../solx-slang", optional = true }
solx-standard-json = { path = "../solx-standard-json" }
solx-utils = { path = "../solx-utils" }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
test-case = "3.3"
object = "0.37"
gimli = "0.31"
hex = "0.4"

inkwell.workspace = true

solx-codegen-evm = { path = "../solx-codegen-evm" }
